start 162685722 fixed nav z-index and left align

--- a/UI/styles/style.css
+++ b/UI/styles/style.css
@@ -8,9 +8,11 @@ html {
 nav {
   position: fixed;
   top: 0;
+  left: 0;
   width: 100%;
   height: 2px;
   margin-bottom: 18px;
+  z-index: 1;
 }
 nav ul {
 
@@ -95,4 +97,5 @@ footer {
   padding: 0;
   background-color: cornsilk;
   z-index: 2;
+  left: 0;
 }
